--- a/index.html
+++ b/index.html
@@ -3,13 +3,37 @@
   <head>
     <title>hue doodle</title>
     <meta name="description" content="the direction you doodle makes a different
-    color. &lt;3 whichlight.">
+    color. wowee! &lt;3 whichlight.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800'
+rel='stylesheet' type='text/css'>
     <style type="text/css">
-      body {margin:0; padding:0; overflow-y: hidden;} /* remove top and left whitespace */
+        body {margin:0; padding:0; overflow-y: hidden;
+
+        } /* remove top and left whitespace */
       canvas {margin:0 auto; display:block; z-index:10}    /* remove scrollbars */
       canvas:focus {outline:0;} /* remove blue outline around canvas */
+      #container{
+          position:absolute;
+          width:100%;
+          height:100%;
+          display: flex;
+          align-items: center;
+
+      }
+
+      #info{
+       ;
+
+      }
+      h1{
+          font-family: 'Open Sans', sans-serif;
+          font-weight:800;
+          font-size:10vw;
+          line-height:8vw;
+          color:white;
+
+      }
 
     </style>
     <script src="libs/p5.min.js" type="text/javascript"></script>
@@ -17,9 +41,18 @@
   </head>
 
   <body>
+      <div id='container'>
+          <div id="info">
+              <h1> The direction you draw sets the color. Doodle all you like, and
+              tap to refresh.<br>
+              &lt;3 whichlight
+          </h1>
+
+          </div>
+      </div>
 
       <script>
-              </script>
+      </script>
 
 
   </body>
