--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@ rel='stylesheet' type='text/css'>
       }
 
       #info{
-       ;
 
       }
       h1{
@@ -44,7 +43,7 @@ rel='stylesheet' type='text/css'>
       <div id='container'>
           <div id="info">
               <h1> The direction you draw sets the color. Doodle all you like, and
-              tap to refresh.<br>
+              double tap for a fresh canvas.<br>
               &lt;3 whichlight
           </h1>
 
