--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ rel='stylesheet' type='text/css'>
           height:100%;
           display: flex;
           align-items: center;
+          touch-action: none;
 
       }
 
